--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "IonicFirstApp",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "MmeOokamy",
+  "homepage": "https://ooka.planethoster.world/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -19,8 +19,12 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/core": "^5.31.1",
+    "@ionic-native/text-to-speech": "^5.31.1",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-tts": "^0.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -48,7 +52,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.7"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project with Angular"
 }
